<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AnyMemo</string>
    <string name="app_full_name">AnyMemo</string>
    <string name="website_versions_view">https://anymemo.org/versions-view</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="back_menu_text">Back</string>
    <string name="detail_menu_text">Detail</string>
    <string name="settings_menu_text">Settings</string>
    <string name="speak_question_menu_text">Speak question</string>
    <string name="speak_answer_menu_text">Speak answer</string>
    <string name="undo_text">Undo</string>
    <string name="undo_fail_text">Unable to undo</string>
    <string name="undo_fail_message">You can only undo 1 card.</string>
    <string name="recent_databases">Recent databases</string>
    <string name="option_button_text">Options</string>
    <string name="about_button_text">About</string>
    <string name="help_button_text">Help</string>
    <string name="edit_button_text">Preview/edit</string>
    <string name="copyclipboard">Copy to clipboard</string>
    <string name="copyclipboard_summary">Automatically copy card content to clipboard.</string>
    <string name="memo_show_answer">Show answer</string>
    <string name="memo_no_item_title">No items</string>
    <string name="memo_no_item_message">There are no items to learn right now. If you want to cram, you can do quizzes by long clicking a DB in the &quot;Recent&quot; tab.</string>
    <string name="memo_btn0_text">0 Forgot</string>
    <string name="memo_btn1_text">1 Forgot</string>
    <string name="memo_btn2_text">2 Very Hard</string>
    <string name="memo_btn3_text">3 Hard</string>
    <string name="memo_btn4_text">4 Easy</string>
    <string name="memo_btn5_text">5 Very Easy</string>
    <string name="memo_btn0_help_text">You have forgotten this card completely.</string>
    <string name="memo_btn1_help_text">You have forgotten this card completely.</string>
    <string name="memo_btn2_help_text">Barely correct answer. The interval is too long.</string>
    <string name="memo_btn3_help_text">Correct answer but with much effort. The interval was probably too long.</string>
    <string name="memo_btn4_help_text">Correct answer, with some effort. The interval was probably just right.</string>
    <string name="memo_btn5_help_text">Correct answer, but without any difficulties. The interval was probably too short.</string>
    <string name="memo_btn0_brief_text">0</string>
    <string name="memo_btn1_brief_text">1</string>
    <string name="memo_btn2_brief_text">2</string>
    <string name="memo_btn3_brief_text">3</string>
    <string name="memo_btn4_brief_text">4</string>
    <string name="memo_btn5_brief_text">5</string>
    <string name="memo_btn0_anki_text">Again</string>
    <string name="memo_btn1_anki_text">Again</string>
    <string name="memo_btn2_anki_text">Hard</string>
    <string name="memo_btn3_anki_text">Hard</string>
    <string name="memo_btn4_anki_text">Easy</string>
    <string name="memo_btn5_anki_text">Easy</string>
    <string name="memo_edit_dialog_title">Edit</string>
    <string name="global_settings">Global settings</string>
    <string name="settings_question_font_size">Question font size</string>
    <string name="settings_question_font_size_prompt">Font size</string>
    <string name="settings_answer_font_size">Answer font size</string>
    <string name="settings_answer_font_size_prompt">Font size</string>
    <string name="settings_question_align">Question text alignment</string>
    <string name="settings_question_align_prompt">Text alignment</string>
    <string name="settings_answer_align">Answer text alignment</string>
    <string name="settings_answer_align_prompt">Text alignment</string>
    <string name="settings_question_locale">Question audio</string>
    <string name="settings_question_locale_prompt">Locale</string>
    <string name="settings_answer_locale">Answer audio</string>
    <string name="settings_answer_locale_prompt">Locale</string>
    <string name="settings_html_display">Display in HTML</string>
    <string name="settings_ratio">Q/A display ratio</string>
    <string name="settings_wipe">Wipe all learning progress</string>
    <string name="settings_shuffle">Shuffle all cards</string>
    <string name="settings_inverse">Swap the Q/A of all cards</string>
    <string name="settings_save">Save</string>
    <string name="warning_text">Warning</string>
    <string name="settings_wipe_warning">ALL learning progress will be reset!</string>
    <string name="settings_shuffle_warning">This operation will shuffle all cards and can NOT be undone.</string>
    <string name="settings_inverse_warning">This operation will swap the location of question and answer. Swap&amp;dup will add all swapped cards to the back of current database instead of replacing.</string>
    <string name="delete_warning">Do you really want to delete this card?</string>
    <string name="skip_text">Skip</string>
    <string name="stat_total">Total: </string>
    <string name="stat_scheduled">Rev: </string>
    <string name="stat_new">New: </string>
    <string name="open_open_new_db">Open existing database</string>
    <string name="clear_all_pref">Reset all preferences</string>
    <string name="clear_recent_list">Clear recent list</string>
    <string name="export_xml">Export Mnemosyne1 XML</string>
    <string name="add_screen_question">Question</string>
    <string name="add_screen_new">New</string>
    <string name="add_screen_answer">Answer</string>
    <string name="add_screen_next">Next</string>
    <string name="add_screen_previous">Previous</string>
    <string name="search_text">Search</string>
    <string name="fb_create_db">Create new DB</string>
    <string name="fb_import_db">Import DB</string>
    <string name="fb_create_dir">Create new folder</string>
    <string name="fb_create_db_message">Please enter the name of new database.</string>
    <string name="fb_go_home">Go to home folder</string>
    <string name="fb_create_dir_message">Please enter the name of new folder.</string>
    <string name="fb_delete_message">Are you sure to delete this file?</string>
    <string name="fb_edit_dialog_title">Edit</string>
    <string name="fb_fail_to_clone">Failure cloning the file.</string>
    <string name="fb_rename">Rename</string>
    <string name="fb_rename_message">Please enter the name below.</string>
    <string name="fb_rename_fail">Fail to rename.</string>
    <string name="loading_please_wait">Please wait...</string>
    <string name="loading_database">Loading database...</string>
    <string name="success">Success</string>
    <string name="fail">Failed</string>
    <string name="loading_save">Saving changes...</string>
    <string name="loading_connect_net">Refreshing list from internet...</string>
    <string name="loading_downloading">Downloading... It may take a while.</string>
    <string name="downloader_connection_error">Connection error</string>
    <string name="list_mode_text">Card list</string>
    <string name="merge_db_text">Merge DB</string>
    <string name="copy_text">Copy</string>
    <string name="paste_text">Paste</string>
    <string name="learn_queue_size_title">Learning queue size</string>
    <string name="learn_queue_size_summary">The minimal size of active learning cards. New card will come in only if you learned one card in the queue first.</string>
    <string name="misc_category">Misc</string>
    <string name="swap_qa_text">Swap Q and A</string>
    <string name="remove_dup_text">Remove duplicates</string>
    <string name="detail_reset">Reset learning data</string>
    <string name="edit_menu_br_text">Add br tag</string>
    <string name="edit_menu_image_text">Add image</string>
    <string name="advanced_setting_text">Advanced ...</string>
    <string name="db_merger_title">Database merger</string>
    <string name="db_merger_explaination">Merge the source database into the target database.</string>
    <string name="target_db_text">Target database (tap to focus, then tap again to browse)</string>
    <string name="source_db_text">Source database (tap to focus, then tap again to browse)</string>
    <string name="search_user">Search by user</string>
    <string name="fe_directory_text">Browser directories</string>
    <string name="recent_tab_text">Recent</string>
    <string name="open_tab_text">Open</string>
    <string name="download_tab_text">Download</string>
    <string name="misc_tab_text">Misc</string>
    <string name="filter_category_text">Filter category</string>
    <string name="delete_text">Delete</string>
    <string name="customize_scheduling_algorithm_text">Customize scheduling algorithm</string>
    <string name="queuing_text">Queuing</string>
    <string name="when_first_grade_text">When grading a card for the first time</string>
    <string name="initial_grading_interval_summary">This is the interval when you first grade a card in days.</string>
    <string name="grade_0_text">Grade 0</string>
    <string name="grade_1_text">Grade 1</string>
    <string name="grade_2_text">Grade 2</string>
    <string name="grade_3_text">Grade 3</string>
    <string name="grade_4_text">Grade 4</string>
    <string name="grade_5_text">Grade 5</string>
    <string name="when_failed_to_remember_text">When failed to remember a card</string>
    <string name="minimal_interval_text">Minimal interval</string>
    <string name="minimal_interval_summary">If the interval is less than this value, it means failure to remember this card.</string>
    <string name="failed_grading_interval_summary">If you failed to remember a card, this is the interval when you retry.</string>
    <string name="easiness_incremental_summary">Easiness factor change for each grade.</string>
    <string name="minimal_easiness_text">Minimal easiness</string>
    <string name="minimal_easiness_summary">The easiness will not go below this value.</string>
    <string name="initial_easiness_text">Initial easiness factor</string>
    <string name="initial_easiness_summary">The new interval for card is current interval times easiness.</string>
    <string name="noise_customization_text">Noise customization</string>
    <string name="enable_noise_text">Enable noise</string>
    <string name="enable_noise_on_summary">The noise is used when calculation interval to spread the interval.</string>
    <string name="enable_noise_off_summary">The interval does not contain noise.</string>
    <string name="reset_customized_scheduling_algorithm_text">Reset customized scheduling algorithm</string>
    <string name="reset_customized_scheduling_algorithm_summary">Reset customized scheduling algorithm to default.</string>
    <string name="number_of_cards_scheduled_in_a_day_text">Number of cards scheduled in a day</string>
    <string name="number_of_new_cards_learned_in_a_day_text">Number of new cards learned in a day</string>
    <string name="grade_statistics_text">Grade statistics</string>
    <string name="accumulative_cards_scheduled_text">Accumulative cards scheduled</string>
    <string name="add_existing_audio_text">Add existing audio</string>
    <string name="add_new_audio_text">Add new audio</string>
    <string name="remove_audio_text">Remove audio</string>
    <string name="record_text">Record</string>
    <string name="play_text">Play</string>
    <string name="stop_text">Stop</string>
    <string name="gestures_text">Gestures</string>
    <string name="share_text">Share</string>
    <string name="card_player_text">Card player</string>
    <string name="download_source_cram">Cram</string>
    <string name="search_by_title_text">Search by title</string>
    <string name="review_ordering_text">Review ordering</string>
    <string name="review_ordering_summary">The order of cards for reviewing</string>
</resources>