<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="algorithm_customization"
    android:title="@string/customize_scheduling_algorithm_text"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:title="@string/queuing_text">
        <EditTextPreference
            android:key="learning_queue_size" android:defaultValue="10"
            android:inputType="number"
            android:title="@string/learn_queue_size_title"
            android:summary="@string/learn_queue_size_summary" />
        <ListPreference
                android:key="review_ordering"
                android:title="@string/review_ordering_text"
                android:defaultValue="HardestFirst"
                android:entries="@array/review_ordering_option"
                android:entryValues="@array/review_ordering_option_values"
                android:summary="@string/review_ordering_summary" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/when_first_grade_text">
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_grading_interval_0"
            android:defaultValue="0.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_0_text"
            android:summary="@string/initial_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_grading_interval_1"
            android:defaultValue="0.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_1_text"
            android:summary="@string/initial_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_grading_interval_2"
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_2_text"
            android:summary="@string/initial_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_grading_interval_3"
            android:defaultValue="3.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_3_text"
            android:summary="@string/initial_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_grading_interval_4"
            android:defaultValue="4.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_4_text"
            android:summary="@string/initial_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_grading_interval_5"
            android:defaultValue="5.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_5_text"
            android:summary="@string/initial_grading_interval_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/when_failed_to_remember_text">
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="minimal_interval"
            android:defaultValue="0.9"
            android:inputType="numberDecimal"
            android:title="@string/minimal_interval_text"
            android:summary="@string/minimal_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="failed_grading_interval_0"
            android:defaultValue="0.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_0_text"
            android:summary="@string/failed_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="failed_grading_interval_1"
            android:defaultValue="0.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_1_text"
            android:summary="@string/failed_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="failed_grading_interval_2"
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_2_text"
            android:summary="@string/failed_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="failed_grading_interval_3"
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_3_text"
            android:summary="@string/failed_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="failed_grading_interval_4"
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_4_text"
            android:summary="@string/failed_grading_interval_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="failed_grading_interval_5"
            android:defaultValue="1.0"
            android:inputType="numberDecimal"
            android:title="@string/grade_5_text"
            android:summary="@string/failed_grading_interval_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/initial_easiness_text">
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="initial_easiness"
            android:defaultValue="2.5"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/initial_easiness_text"
            android:summary="@string/initial_easiness_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="minimal_easiness"
            android:defaultValue="1.3"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/minimal_easiness_text"
            android:summary="@string/minimal_easiness_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="easiness_incremental_0"
            android:defaultValue="0.0"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/grade_0_text"
            android:summary="@string/easiness_incremental_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="easiness_incremental_1"
            android:defaultValue="0.0"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/grade_1_text"
            android:summary="@string/easiness_incremental_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="easiness_incremental_2"
            android:defaultValue="-0.16"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/grade_2_text"
            android:summary="@string/easiness_incremental_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="easiness_incremental_3"
            android:defaultValue="-0.14"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/grade_3_text"
            android:summary="@string/easiness_incremental_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="easiness_incremental_4"
            android:defaultValue="0.0"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/grade_4_text"
            android:summary="@string/easiness_incremental_summary"/>
        <org.liberty.android.fantastischmemo.ui.widgets.FloatEditTextPreference
            android:key="easiness_incremental_5"
            android:defaultValue="0.10"
            android:inputType="numberDecimal|numberSigned"
            android:title="@string/grade_5_text"
            android:summary="@string/easiness_incremental_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/noise_customization_text">
        <CheckBoxPreference
            android:key="enable_noise"
            android:defaultValue="true"
            android:title="@string/enable_noise_text"
            android:summaryOn="@string/enable_noise_on_summary"
            android:summaryOff="@string/enable_noise_off_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/misc_category">
        <Preference
                android:key="reset_customized_scheduling_algorithm"
                android:title="@string/reset_customized_scheduling_algorithm_text"
                android:summary="@string/reset_customized_scheduling_algorithm_summary" />
    </PreferenceCategory>
</PreferenceScreen>
