<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cards_scheduled_in_a_month_menu"
            android:checked="true"
            android:title="@string/number_of_cards_scheduled_in_a_day_text"/>
        <item
            android:id="@+id/accumulative_cards_scheduled_menu"
            android:title="@string/accumulative_cards_scheduled_text"/>
        <item
            android:id="@+id/new_cards_learned_in_the_past_month_menu"
            android:title="@string/number_of_new_cards_learned_in_a_day_text"/>
        <item
            android:id="@+id/grade_statistics_menu"
            android:title="@string/grade_statistics_text"/>
    </group>

</menu>
