<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_dialog_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:text="@string/db_merger_title"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:textSize="32dp"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/db_merger_explaination"
            android:textSize="24dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/target_db_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/target_db_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:lines="2" />
        <TextView
            android:text="@string/source_db_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/source_db_edit"
            android:layout_width="fill_parent"
            android:lines="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/merge_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/merge_db_text"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_text"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" />
    </LinearLayout>
</LinearLayout>
