<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView android:text="@string/download_source_cram"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="25dp"
            android:textSize="24.5sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button android:id="@+id/fe_directory"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/fe_directory_text" />
            <Button android:id="@+id/fe_search_tag"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/search_by_title_text" />
            <Button android:id="@+id/fe_search_user"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/search_user" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
