<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/recorder_mic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >

        <ToggleButton
            android:id="@+id/record_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/record_text"
            android:textOn="@string/stop_text" />

        <ToggleButton
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:textOff="@string/play_text"
            android:textOn="@string/stop_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/settings_save" />

    </LinearLayout>

</LinearLayout>
